--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:55t1Ejx8,iv:MqMEUrAX1Slt2mOtFwD6AyQbJsfKiX4s0Vqle7gFR8I=,tag:znSPBf0TiOFUvAiC6LKOVw==,type:str]
-ansible_user: ENC[AES256_GCM,data:o48FYqDF,iv:SLeVi9gk2n3wyJWe/yf59S64Ft8DLz7kjYKFc63MTf8=,tag:xy83X22HXU9Qq+4G0zY7Yg==,type:str]
+kind: ENC[AES256_GCM,data:s8gmHxz7,iv:CnLyhHI8FHEWrYqytZahZDy+Hzvzqbgrm4Y+RYOwP9o=,tag:oHwgTnQGUAasdIHD1DiHtw==,type:str]
+ansible_user: ENC[AES256_GCM,data:nbUZyg9u,iv:vrLsmd3mGt0bbdLF0G64lK/dgc2FpdCpjFyGMsR4AGc=,tag:boHtZJrl5Cn6oCAWmwQwZw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBicXppeXFWc0VsTm5RTnFq
-            WlFnRE11ZXNjRFN2Vnh5YzFQYXl3eUFTd2xZCis5ay92amEwRXExeXBlSmNPRkxQ
-            UkFFdzNLZjhSdDA0M3FGTUJHTzNXVTAKLS0tIFBmTjA1U2IrbzRwcUFtUU15NFpC
-            UkdjK0RHRkNaR0RKUFZncUszSUhaZncK1e7cfRqW4otF/e/qIDP5fvCtFNTzhTwc
-            eqPan2wsgmaC0ttMKZi1FrGeaSrYPDTKmZ486/qeC6NSZQUubnkeSA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOMjF6NlZlMzA2N3Yza2hw
+            VnYvMHZNeWpIdVNyMnZBYklFVEc3ZUNHZFJzCi84b2RjaWdHUjl3OW5MUVVBMXYv
+            MFJCVXp5MURGMlJLU1RURU9uVFJFNkkKLS0tIHUzTlZ5eDJlemNLUVpkR1FPUkhn
+            akpNdVhOUXduRXUwRVRleStGdUxWeFEK7cI/KfT0UhMTiUQ3RT6mrGS7aEmy11a1
+            KZMhcQOXAGrI2XkDn3sl3jq/+PQ2biHsiPWl5uw3Aq1VWOe39BOTsw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:41Z"
-    mac: ENC[AES256_GCM,data:eiL6WNQ2SK6YVOCWUmAmtaHtVVaJgduAGwLJr7s/LHnmpGisDSHPlqIs4AOCU/PyRn2JnsqRCd1BftwBOgt0k88NZ0pe1p/7UqDb4F2Qj2zQW+W2Ga28ANg2h7d6SSpy1gIrbZHRercGHgKHXX8qUXL/XQYw1RBog5Llj4px96M=,iv:ajXiA/6ARVocXnpE9GJ0wsIwXgs0puwv329oBt5alWE=,tag:JN6NNXWoyyTxidtyQ9gvMA==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:X1qxQAM2TJSIOs+qOczd+/RL/C1Hgahpz/N+TzyiTFuORWaLa0WMNKsqct68wFMAO49xMDdIGMshu57ZkSjKxOsQluZe+xd2pB7KTFQUSt1vmtCM2t8iftVTK9XtFP/JilSNZYRVBpXlXqWYLTu/tnEI0IP4uVgiHYdFT/eNtMg=,iv:yYF4ozrIcJ0gSbMPrEOh7xIQAQPC4d7e3bsoy5iPjcQ=,tag:x5TYv5XTTzG1y+Q5lwSbSw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
