--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ECtrRr9T,iv:Td2XGW7h+EAhxBImN6pQyedyujhgY7BKzjAWSMSYRc0=,tag:+QGFp1YkymHKDKh5lVFOWQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:v6Gqlqcy,iv:oOsakZLOWOTF582evBwjsxy9lBiGIZ77m/MjwKDLSeE=,tag:3OdcRDKc5jIjxI76k9p69Q==,type:str]
+kind: ENC[AES256_GCM,data:OoBGf1ml,iv:oZ4LNV6k4axGOhpEppAyktLj/r4aLl0NOSDmKYsSiQA=,tag:FqJ3N4l8f63U3CMpiu9MgQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:whJoP96v,iv:dKIvl9U3BrdbX3fyJzFv3tTygJCR3Y22H8T7EDh1xEM=,tag:hH81VNewDecZyHME5XMngg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYMkJHSmc5VHNtZGFvb09w
-            YThTQlJ2b0VDU1VlbDRXU0lUMk9iTHkvTmxRCjZSNE1hMXFadlkwUkdRZUlSVDNo
-            MlVUdnFKb1FaZlFNVTc5MkpBdWExUlEKLS0tIEcveERwclVvU1g0bGlVM0tTYWtS
-            UGdMVVY1dG14Nk53VVA2RXg4eFJjRk0KIYKZhruxOV3VAwhZKwtXJkjKtsWcsSMU
-            bONTlDLggG9bNRGYvJlbALdtjZ7suuAOrhNGNJnJKYzXxaIlQ8aReA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBSGNFcUllYUc0ZWxtZThZ
+            MWhOTVV1ZmlkUk9iKzRPQXA3U09YYXMwYmtjCkNGekZlU2lnR2pJdnlUaUNDU1RZ
+            Wkl6NkpCWDc0WXdqNWYrMHVBWTRTL1UKLS0tIEY3U3pzeXk5cWhaWHZPR3BnazE4
+            V0lRZUpBeDlnTktVTHdKZEJRZEhEL2sK7tawWeciEm/I8qDQ8NRHIIv914H97yEd
+            zxH5xaUi22d0dVAhdZ3Yq+IWsogv0FNtMkcf68V6W5vVZWgmk9WTSA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:41Z"
-    mac: ENC[AES256_GCM,data:lA2/5F5xET37kfybbSPIVwgfd2zqq5z8wxt8Ag9Vth3sLeceuzVjogm/9ZvfA+FXz8A5zneY6XUUdqXKfwD7Fm0pRrhJuEh2m527qfle5NQynMNS3EJqIUPnt4DoqnkpID09pagJStfOQYkG3jyLFbdW16diWC8heVKepNM/a0g=,iv:G6wXsU1vZlK4oLGVWSiN2Ej7THsMyKoR107yXYNjPB4=,tag:Uj4m8VpoxMtL0nB7v4MYCw==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:qjmseFaEjKih23ELWQLTHNI7EE4+F64z/x+qRjZZYdMRTfVTG23CjS6PdT05pAaWzu7GM6nlstz8Ovo54M6yOCl/GFV6rRYBJSRcnnvHfdZBOdXuLW8OYIe+dd2Hm6E35H7bqrjI/Wv42uVE8ot0YPhaAwiGTBSRd6/GG4GSRyA=,iv:IZewrdm/8tFS/JAicBDWy0I4DzeEd1WJjKL3IiNWJNY=,tag:An1vRuxwIGBftsNaGsQvDQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
