--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:1Nl2E1K7,iv:/VNaiESyykdIEgsZMunXQIjHnuxpTbUvjvVXoeqgrJE=,tag:L5TpyD+evtt8rzIeJfpmcA==,type:str]
-ansible_user: ENC[AES256_GCM,data:keIgloBX,iv:sFh8mmaknaG95jWrytepnKwG2igsYpoyLadq62q2Rn4=,tag:u5FYsCnz7E7qPQ++L06VFA==,type:str]
+kind: ENC[AES256_GCM,data:CnatydkL,iv:vyYFem9TKqfxrjsajOGWPE5Jd721OXJ8YUhVRqceuaE=,tag:S/VQxczV3i83Gq5AehpRpA==,type:str]
+ansible_user: ENC[AES256_GCM,data:LCkCnuKj,iv:Bm1uZYbU9wzVZ2nRhWqD9YL1gAovIvKxZtVYlVDmKQg=,tag:cZ8ZROdFBy0KawTx3zqNfQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxcC9DaHFOUFIzNGxhdXM5
-            UkQzZWtaaWwrYkQzVE5CRUh0SkVSRXY4cmo4CjBmZEg2RmFGUG5HS1ZPNktDS25Q
-            MUNpRVQzTjBmMlc5ZHFwNEM2N0JYc0EKLS0tIHZTTEpEbUxvRSsva3pUcVgwTXM3
-            R2NWOWRKSS9WakNJeURrWVB4czkxOXMK27T/fpob9tQSh4kiW2TFXWKkKz9v7A4N
-            IZbXpf6JFqZybgDYuOjRlUKc/vppKuw/fagntle+sbEPtThBbkrcgg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyUjhNL25TVmpTMGhDaU1R
+            OVVPQkJXdEhkKzdUYjluSVlTckQ1djNzSm1RCkt1dGtDSEV5SzVFdEk0OXloME9C
+            bTVDZEUwSG5ZN0wxajI3VjhyTkx1MGsKLS0tIDJiR3ZUcEFSNEgrcjRBNjBKeFlE
+            NDhhbVIybGRrSFVGOHJyS3A5bjFPRnMKq3S5yaD0dGqbMvDC/0CneJF3BbzhFbLM
+            Gr4isjxBiyxc7zSulgbY0SGS8CDDL46ZP2MMjPp9oULyXBn6XxsN5A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:42Z"
-    mac: ENC[AES256_GCM,data:uMb2+5E/uTZ/JzCLbFvT/qjw0kCpd3dKXzjamwhS6f8rUs9Wb3cQAyvbSTPrz7tXQFMRww6vi75GM4ZsmRvZd592GkfTdX/AG/kPlOi9NS8BUF/2TJZ/57VAQx2pd94X1V7mfNvv0KfimWwGOOq8WWay6iWzPGwKHY+ZRTx5ce8=,iv:vM7eYdgKARIUOAs+NBjVNXMpvYYcyWoAopDQXl5H5sQ=,tag:MbaP0jzHh+62yKf3shabBg==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:HILb/Xhlihlqexxi+2PuirjyT8MS5zZfTtWKas8qTZnZhqZMpv5yD96Uko084eojx/WfzyePxUJPRnavsOh6dqnIJ2/nD+OFaPGYvmaBzYcJQ1RRVLq0w3IGZ3OyDjtTPcjCYDp0+hUG8WBQtl4seMfp/rSuyt6XLe5Qii89J2M=,iv:vzs0kPazkuHR6l1r6LV7MmKkaOe8qN6RwdY9/HIUmxo=,tag:AdBWwKTMnEOyK03PJIdPnw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
