--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:BzAJtsvu,iv:OzEcJrnXnZlj/kUSWhyvbAPCvNiiAT73EJ2lVpADxIA=,tag:Zl1xG0irHiL7yfqCU9BQGg==,type:str]
-ansible_user: ENC[AES256_GCM,data:SpQddZHn,iv:4O1vp53qO1IoOOVfMV/hzEMvjmdapv44of3NYGtWsp0=,tag:rOf+/PriM2P0+zcryL6xdQ==,type:str]
+kind: ENC[AES256_GCM,data:83YPTIeq,iv:ofcNfKHSfBgMR8w9+iYxELx9TgOdPGlV9UN7QbKxzSo=,tag:bU7h90RDnZdRJxSnyOstVQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:yAi2G/cX,iv:NfJAMR7bzRWHisTGRAK59yh1BLMrOnF/kL+kHBxV0JA=,tag:jHaL1VcgnFWruW8H1ZEezA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Y0pIbmpRRlhnbU90UUNJ
-            RjJOMjBxWWZSN0hBWHcwbm1zRXVMUERDTHdjCm02bjlaNjRrWmNzODBkK0ZMVnZz
-            ajFjc3Y4WkxmVnZ5OE1QTHNBY3lRdU0KLS0tIFZUV3crcWoxcFlBMnpnR3d1STZE
-            dHNSOENJNDRwN1o4SkRiMlYwbE1KQXMKXibXQeXJe60LiZCBoMiwAq+FO4yxKu3G
-            rbybo4p0LDF28WMkfBeqq+HPhKekw2phr2O/hrPJM7yI2U8tDiA3HA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUcHNVeTUzbkpLK1pOWW5s
+            Z1c5eHAyUklrdWR2Ymp0aW9hWGV4WmttZjBrCnNyRnY1MEZ2TmxzZWdPZTBYTTJR
+            RVpMNWhDa2MxaUljMjVpWlZzSnNMLzAKLS0tIGlGc1hQUzJaWHZWS1Q3UnM5UlJQ
+            Ylg0NkhBakREb2QrSEFwRmcwTlNTcWsKRzKAhu7wYRyfT2kmvQjtmoIhKlsz/cP4
+            YsQQ3JYEDhcSV1aeC1VMUs83xwqDnN0KNlN8OVFh0y+u2vSNwXTHQQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:42Z"
-    mac: ENC[AES256_GCM,data:o+za8AVsqKfUYZzPdTmedq+skrLjCjRjWbxonhBtVOJvtDXBbIAINWS80RUj9bYpaLyQAdVGtn1xFWULjEhFzVonT6K3WyhoGZfmejxAqJytMYgQfY0Ebdy3mv7CpKQ7jqOBxTp799gKkPyGDu9T5cHQ/p+X8HAbNVnMnujhRf4=,iv:EZ0+t2LizxLtVW32PE6/vvrd1Q9gRDwcEMKxgUlDHMo=,tag:q8C2AjBzFFisz50bmRUwiA==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:4EO5QqJEYG46FOcP4EktASXRid02iVCg3Tss+atS521lIySy/OCGB95szgFU5pa9oKYst4GIHvT1pba8Pym5iq/INTkMAUxt83IPGKc9xUwWWj0YHZN8DR63Vl7JM6RAa3S0mPdB16nQg+pB0Uqd1e9P2OoJhdZOXi+L0Cq8JaU=,iv:J896Y/Vo/W+mvmcjRr4b5jypzZbM4PC6XBl59MDDu/I=,tag:0uR9AfCKf85QPhCEapTG5Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
