--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,34 +4,34 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:Xgo875CuJDTbE90=,iv:gfbyLJrojIppx9T+9pFCMYpaevTp+haZu/qVmpzLEFI=,tag:5V861r1fb/sdbWjIZWI6OA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:dPQUMY8ifEzqJtGXWVifGmvZMCU8,iv:MCXRblrk1ev21C1MHZUBJ5Q2cTjVX+vbizXDD8jK7xw=,tag:w93S4F0SqOVEO6AFigPkNg==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:dP8hiz/EQhQVZt/M6RGQ+Evb8u+18nzwXR9XbTywSrPQCy3Yi0tARgbdr3FY5+M0lYqL4brDK3aoFCHq9q+HfnfMn5mJdGM=,iv:7fbzoVibnXW/5TKc8xzq8WwKX9ixjwxX7gWIAKPRb3Q=,tag:pnblirBu0TR0CqsczPzimQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:sb3OdIqMCaHcyO1k5rY9jEfl/DUB9oo2pxBjxtwfoAIPEck=,iv:OizMAeVKHhv0r6at6i0yVyG0Pc4LAOHH4NqhvV9DqeU=,tag:VXzTr/J9HjVvp2qUJdMkqw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:SJOAnbhjFnMGH9KA11kgtX4gNQ==,iv:92VJ6QfHro8AXO56KJUJytKL+nayqAkoWVhv31DlJ9A=,tag:RuuB+DuMBybaMPmmGcS34A==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:w9ZbK13mOSqXs5VSWGCaMFRvF6tu,iv:z8WQUnBe4dy0aVy0wy6vBpvqm2ruBE+0xRHqh5vez/8=,tag:QxKPzUvlIzFNGJFG365fkg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:osdYJbRFaZE=,iv:virF3o8Mdv14PV6DjPwLSDqQLBLKeq6zCTsH+ua/iow=,tag:onrRHlbn2EmXyabPCRI53Q==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Pi/6gKU6ZBo=,iv:x4aJXPxht7IHL08BAMxNQrMPuEWSN22tTm3PTpT7K+0=,tag:c/4q/Eeu65csPo23UAh6ug==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:G0SHdfM/aGz6IIImpI1/JX5+Ygp2EZQFGLXhNQqr7xrwdzX/Sw2U19zXqq4kFGRSHszPxw04vFJ3i9ic6fII/g==,iv:Ox0cthtn4eIsDpSKTs1kvqf/NyAUlJ0PcaeRpFe2q4I=,tag:UoY6PrInHlr1ShQyjCiC2Q==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:cFq6nKRH9gKl7MA9PR61XGuWGaQcwi5qClk+ZxuMZ8SsLOD5lAOK1jyAuBOhHA7+9ivqy5HcgxL3LmHyzosoUg==,iv:JRR0sN0JKb1J9GGv1HCrPPLCDDG/qMB5k8ymDa+VF7s=,tag:8vBgbLCGjrr45UWQtDiknA==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:g/8L+pqe6azK,iv:dmA0G3aaknPOkKvd2PqUPj/55dPD4wVtgJ8l5f9e/B4=,tag:ROlgIZYAJG+wT3qGbVgB6g==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:KQmlpPayQeogOzr4eoKl,iv:splCka7z5vk837ECBrXT5jakm4h48jX80UjCpzZqVKw=,tag:H0yfjhc+r0bdr3LodhOXmA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:kQE6evL+huR9HQmkY7z4EopvG6pSCH6eX/ocL3+BQnIo3K+fZe/H8lrLs4HpPZnq+hk=,iv:QXQIxJrtzKz7aV/Ol7pBw37QLTITQhrekqxCUmWYH5w=,tag:YAqUVel3nKrZaD5875Dphw==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:WnCtaPetdiaoaxFPMnM=,iv:nJ8avPNeauULKT6dwUEqq+Y9YESxDFJ1sWieoqz+WWc=,tag:tcqWYpzgP0mgmu34Myc1Sg==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:php0feB/wwg6Q/yzaINOSDzI4J0=,iv:uGsQSiPy7Xb8NCcOY6NntaeGpEuv1q0/GdHGClDxuO0=,tag:rznt2QrOEkR3EKchwYHs8A==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:gY7Rf+nm7k8=,iv:+KdMC3fbe5X7qBQxqRTQKsNG5jGn/Eqwz/HsattBTog=,tag:idL7yWOUE1/wvLPAQeYgcA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:uQbcpQA0vLJn06x0eB6/8s5oGKcuUftgJTRJjCws3W4+/vIW,iv:pYDkknDxsDQR3AZ2Moq/Aa43iF1pmFn3xdCf+sbCAf0=,tag:PzHkFhPfvIzPbBqwwXnVqQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:0e8mEIjbGPTq,iv:Y7JtH7FoKKZDp6aL2ndYrgY4aVP5acThoVCJ8z8Y7LQ=,tag:PYWsUr4vfrF5XFvbhhqMUA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:lnVz3lGKYCw2,iv:Vl/SIb9eRR2cbvLBDNrEYxNQF8AVVG8DHlzKv7VjPd4=,tag:+fWRpmFeufjJBXUKE6bOTQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:ySSQfGl+YQ==,iv:S4ttfxrQ2KbmW2hjeMz9C8s/uBwVEGxvREyfkMPRLzY=,tag:oZziWbz9Zrq0ePIF6fFOaw==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:bRKZFIuRjdlZ,iv:ReodemkKmb/Isx+BQ8le47ZC0+Qo5xApHimLpwxkyYA=,tag:iqlmJ9NlbCH66UDC4WJvLg==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:6xnccSiKmoZdD6lJFU4FyLpq,iv:mjxaLGdnEjwqxEwGIsyHkKrguP7F0Rj/5IH2bVK89vU=,tag:+1cTDS//SvzCEZ0EqD81JQ==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:SnnBm61Gjj5S9B7wvivRlxqXvg==,iv:cApaWWRsfg/g7LCwk04qEriCx42GJAES6GJcwu2QY+4=,tag:wLuvO0MhXDCX1P4UUw+hEg==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:NWtLLnCuPbs=,iv:GMpR6iIscNTgDixmWst6ijGCu8ggCfZUPSotf98NZDE=,tag:7WkVd32hvTuXnPbhV7AtUA==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:DB16cgn2ycdTM1t6xOcz4Q0OjQ==,iv:3N3szGS1DEm+G5kXJfbTMulXNMsj7t+OsiFEPZ+hE8E=,tag:JUmtRh2rdz1dzKHavkp3yw==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:sTO6BnbfqSCE,iv:nD8Y00DWHc9VSVjZLhWBkwc20si18qRBWPShRT0d1PQ=,tag:N0F6aHE/dW1ae2/P5f3eUQ==,type:str]
-    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:FqAsERIQHMel9Q==,iv:8ZuqOlP09KqZEqJqhL6YwB7OsV0vvYib+56XAZUZA8g=,tag:0DioJDG49Tzx+cS+Tv2XZg==,type:str]
-    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:z6qJXUHS9vRQcQ==,iv:id9S8daer6zE4rmv+ZxVy2iY+/r2aSsR5/krngXtsWU=,tag:5FkSpGU+iy/7BGDrlj3T3w==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:zKWVUWYLYzpFYrc=,iv:PuWjoZuJ2+Adoit8vbVIhM5KvkfCotQ16WtWlue2dYI=,tag:Z4l93GAdrCHu90ca/U3ukg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:rtCQ4KmEEQtzg2upAUP7dCcKhq0e,iv:C5PbTiUJHF6pIgC7UBU9WacA7qVicIayyw0Xsus6usE=,tag:szrhEJsBr3zsl6r8aK+FvQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:hfX9v3qBumP0x/srjV3M1MjLKVfCEda/n/TipkQPwUivjrOwJlOMF5Nh+3lIkl5ky44Ne3akeH3c146asy8rAM/XvZ16iew=,iv:AiUDCcfVIGlBkLtAa8ku+HkG3Uv6QBtQUlv7Vn7gBY8=,tag:lNtutt53zRrYU3UlnW/iFQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:F1r7Fd0S/exAjOOsnhzL/v8EAcIWNGGFAtcPaTTGZUTH7DQ=,iv:01/MXFeNN8mCStoiRyzqG/gB97bhPI3TftdnaLXDp6I=,tag:l7gfiWwYO1ZT0Xcyp7TtiA==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:tSoQ7/Z4jG8AFu3KMkfxN0Tj8A==,iv:j1zdwe6AhbUT+wB50+ZQH6vbmbMCsAI5h2VieFNK9qw=,tag:2JSe1wyjlgNbU+QtxlwO+Q==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:VzXVElfUe9oBZmiQXk0ghqmGgWAt,iv:oJBwM3mIJbpDKqIjQOhunMcSCWL9t/qTQf7DiemCeyA=,tag:FFTHARShULoEOC7tZElT9Q==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:A1XR/F9RZVg=,iv:LlDILIUCuOS+uuZ/whjR4kjE2hdJQvjv2wx6hshphxc=,tag:JlctDr58pRFUjyGMHOVXOg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:jYzfRyCrT66MufRDOf6kZVZ6doabTg0wBGI3U/v8E0fwsYRiWybYx0osKODOaFFM1YNW9RJQhIpAVMQ=,iv:uT9P+4gpMbnmGhcYuyufdfSb/GVpWsNyUpG840I15i8=,tag:kcQivtJO1k+5r8VXLTy2ZA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:nVE3sKxVG7xZUnVj2oEa+lk16UCSV3PLlzgQtd5mNcXJsHcmy+KQTvCR9Ye4g0RleZuBMoIjanh/OezFco722w==,iv:cmBoJMRREDTEwuahTtlu5o5QBg2UC7uEfjT312Y2USs=,tag:2sOoPhtxOUb4IqwgNMAmlQ==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:1XF8h0uCw7HFTJR50bR+So2A/PqQulYlBdQLksCMggv2UdErlb0zjOF90XJvu+5FcJGoCc45kveDlRdZzt4i/A==,iv:qj/xHYCYI77zQ1RYsYj7Tw/Nya9T6egrnrB1N9GuhXk=,tag:VdGeI+ZIyvThUokppcPiYg==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:U0p6whkvN0nd,iv:wk91dqAzg8EL2LMc9/a6Tibd7SzhMyCcg4ypdTIhymY=,tag:+BEnnNGSMw6OLcz/YxcUgQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:e4RZuECMADrxoYTcE8Ih,iv:xwM4HKSl8paB83vowhwfN3LhWxUnAyf7i7oe/1Qb6HE=,tag:VB4corOpWGHm3jpXvMRepQ==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:6/dekfPUERbPnWH/koGOaz+9D1PCue3tw95Q2GvAoDsYJBOL3af7Rcy0t/RiKDbVaCk=,iv:OC9EdTLkGVbTT0VmZNMsfUjal8lGf5/M4xi8nFewU/c=,tag:FdczIEOqh+OmpgmYzOmSzw==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:7V/UWHpk2Yu/xvDaq7c=,iv:bi2jP6trJvmtdbc+lSIWuCrTchYu6W+IAwvuQI82MSw=,tag:kXe4o73kQOoJURkwwGiyOA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:xoMIQDTS4KMzr9sj5PFt2KvVqeo=,iv:kSmA7NUiyKY7/AYB4P9gHhN2sOwRONi4+fVF82g49ow=,tag:uhW2dLQKthbB0tZsyEQ2Hw==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:3UjJTErjAsQ=,iv:R83tCr7nyaQd5eTqPI5nqrWId72ormoOrFdzOagHqsk=,tag:Mtj13R4bN4B4wG6dvV0Xgw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:VAqokS84praNy6jPMvOip1s8Be2IB2S6TUBpE26pf+/olft5,iv:E5MT6ML3CJojFs2H0PdjzKFAYiXqBm2DVFtPOJyH+x4=,tag:45fRUNvcDDnhiyH0Fc76Uw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:g4Q3P5U5P6yt,iv:k0mHCPWcL91CAmH+sQyn6qBzW3KL+PEHvv8jHiIU6kE=,tag:QxjlV8P3wcEhxutioGvOdQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Nf3/yT4bzUt3,iv:AQ3HsEHtUuKH6xCHpooW1tiwNBuPafIjf+NzyESqdWI=,tag:O/f29vsFS77eZJbg56glIQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:rqyeAqiSCw==,iv:Xsq2t8F4Qp6xb02WkINxKv1yVCFa1ridpALpjgK3mTw=,tag:kaoVs2YxzWnZHJSSCNKqeQ==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:zz7KdVV3/zqA,iv:+ndicez96VRjunNi9gf/Z1dwAxBK5HzirchuSS/mqVQ=,tag:eeWtrxIiPwneIQNfJhuLbg==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:dtBkOYXZVKWZMnLC1lhjfMrN,iv:mHMre+XC46sMtYPwuxNaroYTouOT/1gdX28j7ENKLjg=,tag:RkV83gjzIjSFH9AfvgLLZQ==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:ccGBHG9ZjCI81rWDCJ0z9jVQdA==,iv:B4LIldptJgyl2mfnkZhNM8SZZ9MS09LP9Jhro99sjis=,tag:cAdL5BzI3Dl8m6XnUrGLWA==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:3JquEz8Mg5A=,iv:Vy/DABpmDLMU1/bVrfWD1070/Sk5Au6e7Mah+J85RL0=,tag:Xf25hfavg9zG5RBTCPLnZg==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:c/5CdI8/xOlsdmK2J8hU5ZHRng==,iv:nN7S4oNyy2fP8H68P2Td0atqyagJuKA5q4mHavJ3HLc=,tag:Um1n8plGaCux3g/Ff4fUfQ==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:RCOl/WzUo2Dx,iv:fa/ogo78mNidU1h8RRJwFNWUv25heO6+AC+W6OnFeKc=,tag:C/3eMa7rFuoYM/d4szvRmw==,type:str]
+    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:+vGvpddYHrx3rQ==,iv:nSPAZKX0Uv5O+a9JfB2zzdNab6h6IygqYYLdc41jW74=,tag:JFxKleq4E9plYQCUAc6IgA==,type:str]
+    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:wbSzBlRIu20C/A==,iv:gUHjf/1c+921yLHvDf7NOtqGNl/zn27TamzUy1bQa5o=,tag:tp6QMLwzsaRJdXk7VNvkaQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -41,14 +41,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvaGxET2hnSUV2Wlh3cnQv
-            LzlLeWFJTEZIMjZlV1I4MG1oTXROSU42Y25JCjNDbnhUUGlIOTlqVEowVElqZndk
-            ZnRMVDhNTmhVb0Yya2Z3c2xkcVkxeGsKLS0tIHJSRFJpQjB2UEg1TktFWTVScE9i
-            K3N0ZTg0b3UrUlI3L0E2ZnNzT3B6SmMK942a2m0PNpotQQv83m5rcRVLWBTc6QKC
-            qo+WVZrfbgTLIIY79DmbAdHhjJxeyACwzYBLNtUOzv/xtyaf5p/7Pw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFZGxaWlBjOEJaUXpLTmta
+            OFFmdWc3ZEZ5TERCVkVKbjcvcTZPbmNyV1M4CnlseUpsbUxYY3dZN3JvNWlDeTVV
+            d3YxbTF6cGszZmZDY01MRHlaWjZTRkkKLS0tIGZyUlJtc1BVSHBnejhVczBlUFB5
+            RHFkYitQaVZ2YkVyL1VYM211T1NsQmMKQVb56vrWmEle4MVa3xAeXjSAdTwc6jXQ
+            8EZBgSbrTUXYep5lX6DMen30sx0C5/rN6VN75J/aq+NhKb0fseDJ5A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:41Z"
-    mac: ENC[AES256_GCM,data:2TovHm99G1zBJKj2xjaXmThSRRchWDkyyEY0UwREvVy4otNal9UmRVQu7hKbhb7KX3DxB/uRf3e/uBTmbyJFUwdITUdQq5qX2ZBYnjtSlnTx+63JRTM97+c6eUFws3k3oQ9jNBWiwcVRLylKRa7YNSHf0B5UTUQazrp7Vg6VZ+k=,iv:8qzVhNK5+RcqU4Omqq1vdCKStFtrNk15AKL4MHJCJ1M=,tag:KGB9NtLbn5+Qcy73uWbTPw==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:e7OYIrvXXiVU0AFpnYAmJBkpz4KhhnAjf3TbMSS01L+PiccDrkT58/Tw/TxRMYs6KOtIg4Y18MfzXPeT2o82dX8FDX/dM8Nab41hWwsujBViBLyb2KZS6oJmixUitWeCItWRnUKiD0rH58ZkGEzSIjfJqFqw/GyVhb8B6pROIJE=,iv:Qv6VzsXlKJLoiCn+9Qngzci5PAORXZSqfn33rTCUfKI=,tag:t0V/g/nciakwsuu4aIQ2ZA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
