--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:IXs5l77a,iv:6aEoi5Bxl0NUx8uGgI8G5zUjXGalZrfzCzhjUj6HGqM=,tag:56s3jnrheYdcr23V0YWKvg==,type:str]
-ansible_user: ENC[AES256_GCM,data:LmqFNb2n,iv:4BRF21W7Wo/Uh4XaM4y4Xvco2jzO3og2fGiShOitU7c=,tag:TErURyY+dIlg6SoPk1FBUA==,type:str]
+kind: ENC[AES256_GCM,data:CnevKgGA,iv:0S7Z7GESWiV1yDrOSTNsBqLwdxRQ1BunGzG66/Fthac=,tag:IjHnGlwwAzjwb5AZwanxhQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:amTXt+Gd,iv:BVG66UihfzrwtFDtxdzEmJweseKqicKgZB8S4qtJv6I=,tag:9dsaeJZmWMkUSRyBlSDLsQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGbWxYdlNVeUphYzFSZlR6
-            TVlqV093d0J2WmRHZ0ZuMDVydHAybWVPOUdNCkxpRGd5a0owZ3V5YzYyZnhJZzF3
-            dVZ6Vkk1N3A0UzJ0MWFyZ1BqVVJlMDAKLS0tIHQ3NUZDaXJkWGtLM3dudElHY0pq
-            cWZ4dnI2V2MxMldFZjN2WWlBLzJFSHMKx89FhBQ0AgEmmqskAfp+H6b0PDj0nf4M
-            QrI5VxRERUQWUA6QgOEdj4/XX5w7T9re0oYJlxigUOYZixYz3oXOxg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1QXRhZ0l0ckFzNXJmK09V
+            c2RwTE44c2R3Y2VSY3F0Y2p6aWZlcGVQUmxNCkJaU25vaGU1WEZ3VXVQOVRsN2Qy
+            bVFyc2gvb05GbHNwYkdpQ2dIMDJNMUkKLS0tIDdKUmVkUXhqTytzRnE3cy8yMnRB
+            b1kyZ0tLeGhOa1NrSCtyMFBCUU1IblUKuCzIOIZeOfMoxFvroD2/Q4OGEoOTCTjd
+            hHPfazOyNLJsB0N6E5jtVC47+twXs/+g4H7jHWwqM+uELGIYILnYLg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:41Z"
-    mac: ENC[AES256_GCM,data:zyEWC+f55mrAd9wY5+tP78o1OmAHqYQfUO0Q8Ytb6CLouvM0PTk+5gRXJ+iVlsSUXXeuB+/N7g+wlvTlkbBjCgWgtDm3mIJl0UlgVVoewFWVIRE9P7b+NVSlcLY1Okqld5tAkHb9R7O+oU/NRKo1sYnCHW810vkdn+6RV9EwN2c=,iv:LQRASVHuH8GnGwQnB7jIFxE4k2vBkUlPJj6O7dk1RJ0=,tag:jkpGi+fvEPcW+18uJOVkQQ==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:JniAkwEQEpiMTCYs0syZPRxiQ6IwW7sQQo7RdabbR60vLIrHLIC2L4P6IPyKlN5YdMTE1x8BpvfHauAM80NnfP3QLToWxfAMPHx5bZIC/5fjwRgFfl6s2zQDTGdN2299tQabk6RYLUdU30qwgqrbv2qNNXw7h4uBRluBi5uhpPk=,iv:zvHv2vr0cHK27J69FL6wtqSIZWyDml6Si5ByOLzW1Ck=,tag:Ep8IooV3PkJsJYDP30A5IQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
