--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:7lh7TFyJ,iv:RoIIkxbLXmev9dhAe5awlJNGxS1bNJvFyGdM4TY3+G4=,tag:XTCdvc+LUS5cxisF31JYSA==,type:str]
-ansible_user: ENC[AES256_GCM,data:DhItLoGG,iv:4cN1PrFUzI/yvhRbfyGEPQt7/VN1LbHvgvq5PoYdQu0=,tag:y2yiMchIiNinYSrsSOKMng==,type:str]
+kind: ENC[AES256_GCM,data:lqFD5iII,iv:GeF2U592tS+OoYJW0VK6ihjkG5BzOwoBunWtQpgH+g0=,tag:CT+dWu9su4p8LReLYtAnwg==,type:str]
+ansible_user: ENC[AES256_GCM,data:e486znCK,iv:YMwENBh2ezeoRitnmSKyeX/V1VRedBgD9s5MeqYZ0NE=,tag:7/uMkcCtp5xElXGQLg5wdA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBicjF4YlpIL1AzNnZ3QXNC
-            VmEwUnFpT200ZVNZZ3hFU1lpa3NwcGk3dGdvCkNxTG9wRkVJTUZ6aHZzTzk3RXdT
-            bFBEWmtqNGF1ejJyUFpzRG1MRFdjRXMKLS0tIHg5ejkzSjJVYXd6RnNhUTUzWDBE
-            VU4yaWRMRVNtbmh2Z3ZSSTh1RE1sdEUKyk5DbP7nJ2znFxlHx4L836VuZLKlYAAH
-            YEUwpbxAu/5ZoN96i3XmWpmksr59kcd6vIGfnRjcooxvhqSFsCm7uA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoSjF3NGRWM3JiRlVheElO
+            b2JaRE1peXEwYk5JUXk3alV1UzVtb1Era3hBCmpJcjQ0L2IyM0dZaXh3YlFVb09w
+            dW5pY3BnR05MYzczQ2NKM0lkb3dUcG8KLS0tIHppY0J1OW1ITXZ3cUFiNWZJd3V0
+            dW9EaW1hSC9FV3dYUjZlR21wdWVWdTAKnfZHzu5uytwktXRdFVs2eFRyWuVhotKh
+            NEVBdntOr7SolIBkmmJSMC0UA/knNlZ4OsMmA81S74nN6HvXIKYdnA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:42Z"
-    mac: ENC[AES256_GCM,data:PqsQLoaY1KrjXcKPOwM8dYAZ1LTfg0j4vTDBaemducJnYKN4v2W5yJevhhxa5ek4bA1gPp/bfzhMVIOuTcJL2HjhYhcHHVVuuvnjdVlopgx+clwROlvfal7FBcUQTDUq6DQcrZBlKVpnKK87sbskbBDEGTmgvA0bNh+n6sA9kOQ=,iv:QE+GISwFWvyhLFuCbItsiFCGvEotgqto0rQoKG+aao8=,tag:cIUi8i/GPQ1Z27C/gZf7Ug==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:rq0NkMC6uq5MRtAezAle9b7MWadKJqFV81S5SgFvxCk67v7u9LTAgU2+jzDnsIW76ENiWEvkOIaEiwB2SxMFMcFb8Q+pUL80B/cnS52cBVmmQqqMe8Ntl6cskoMm4BmOTLqQLXKPMXi8pzYBJVIOMP+jd6eOlLWxv0Nd3G/HetU=,iv:+gryrtiM0bEcwr1a6PI3v8IfpgORpFoiV/Op90ztWIg=,tag:Sf1bRQJ490ae16We7R6FjA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
