--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:yyitvYWs,iv:gyhCM3rb6qTq5Fl6EuR7wUbm5+3ozK50Hm19Bc0Bft0=,tag:nPh+Ph71uUjar5uDUPwbNw==,type:str]
-ansible_user: ENC[AES256_GCM,data:AWstSlv8,iv:VK4x9u/gRJ69K8URMmOzQ/JRn4cG37JueU6pIirm4RI=,tag:eNH8gvfoMo5ap0O05/c6Vw==,type:str]
+kind: ENC[AES256_GCM,data:0BBQOSfF,iv:/29kymDRMSJLpGZ0UcvG1wgC84Vwn8LI04HBI5L6Rt8=,tag:F+xKI1jP7aT62Ps+le1XvQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:vRshQgwO,iv:W/NDNmohnNPoV1Bxo5kdG/WBX9yVn2xwoxmzt0qwBqc=,tag:HnByVRoABJ5JTTRmqNwy5Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4LzE5akFMS0I3U1J3TklW
-            SGRqbkxEVnpFNm15SjRNMHJGVnlkcDBsQmh3CjRWQmROdGN4SlVManBpbGdnUUU1
-            ZzZCbEJrUUk1cExZR1BVcHNZNk5rMXMKLS0tIGhqN2Nqc2RvY1FiV21MUzZubTVk
-            aHM2MDd3VXg4YlZuQ2lsdWJ2UFhsWWMKCOlp2+bLzvIWkELKxtNUm9I58W3yijqh
-            dNZT5Y9TAouDybWmstVOuGh6WwiMYb9gZzolybDF6sZBFrNFJqfYtQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpTFhzSVlkNndpb3NaTEdI
+            dTl3WHZZTUtnNmRPNi9mNEVOaXYwNGJGWFhvCjd1a2dJdHZzR0RuZTVUYWxBSnVJ
+            bEE3ZWk0b1R5bDRIeGNCZzBWM1NCTXMKLS0tIDg3ZnZzVGFSQXZ5SGoyZDVVWGtu
+            RzBxNnl1a1BhQUhYSEp1eEdESFFGL2cKit47ov6bcgwNpb2vKqM50hLg29J8L4CJ
+            GnTZxE2Hfm7mAq/r4IYzt6nNJ2HUwfuNEyMg5RPAo4Vtl55MW9q23A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:42Z"
-    mac: ENC[AES256_GCM,data:ODLeP/embmPZ+o5EJQzwei4c7D5wBrYBd7ZtW1J3mM2PNnZmVEUmBn41PrVXVicHG+6CeVNo7n7l/KgddB7sVAM4XSrNhsZTQ3BXI8XFYGmDIrthWn0zotRbP6dRstAWKWm4Lfzu3Q6HelO1ZDh3ds0LZQNJuPCpsYMUF7WEFo4=,iv:4DGun/TqpzgGYO2+USe8oXbGhJcPVg7EIu3u7pZJbz8=,tag:hSUpU63t+orQXqcEZtliiQ==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:4wbWVh0Oje4YQ5KolLRuVC1ov7SX59ioTWh2TbtYfUJbmES/qqLR0nz3O9gdTb0cLbkt0Ht5PoMXCyyGTs2vSn3eYaQQLd6XJgL4BF4gzk945hQGC7ToYVT3Hhp+07cFDCWilbbPBixJ8UB+1E3Qja2oDILeqAZy/Ym0Enxt3jM=,iv:ih/id9Z9NpEq7Y3UhMR571RAGja/JCmjfGyEHxiZ8CA=,tag:NJwP9N1u2sbNVdpNg5TK9w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
