--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:rbZLDZ2G,iv:0bsBYUA9NiMbZG4FmZZwUqa0kfnVXOBD8hus+iuW8+4=,tag:NQcpAHfVPOsr3j1feaBBFw==,type:str]
-ansible_user: ENC[AES256_GCM,data:IcjjMZWu,iv:w5ra8s6VrqsDxfAe9H4jasH2E8sXmwX4TDaGOpR023Q=,tag:YJeKEfwEVZBWOmyynCQJKA==,type:str]
+kind: ENC[AES256_GCM,data:0J1Jd1QV,iv:yObM9U5CnMJLsEIFWqa09Cq8L3VnhivYfca2yYlQg/k=,tag:LQw5uC+RzEzVff/+nzKGwg==,type:str]
+ansible_user: ENC[AES256_GCM,data:Y52fv3kU,iv:kf/rESrpLiT2jnlO72drApbDz8xy4nYv1lalf1j6+zM=,tag:LHlzR/+p8MHEr16Z7OUmXg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3N01URXhScXBIendod1NH
-            N2M2YXpBVkhBVHhPMmRBQmhXemF4Q0xMMWxVCi9qbFpOUjVYRWIwQmMxU0lRWm1y
-            REpicEsvV0J0SytBUkQ5ZFFuWVRIaEUKLS0tIEtZYll4dXZTbDhjNVpHYkM1dFUz
-            Q3NETWZxUlUzVjM3U01vWkswVUhRbXMKSuXe/NePSHCDikJ4BpNgutOW/9qO5sxS
-            GIji4h9OvEtDX8vUKhugp5WuJdYSpx2II9OtzX8eiFYsSpA9zqLhcA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSQmV2NFd4cG1aWm54MFN3
+            aSt0alR3dkRtYVFxMzZSWGNGNC9MblcrU1RvCndyS0YrSmNnWW80Q1RPVUsvSSs1
+            MzRja0x6RW11YkVKQnZtS2FPRzRqdW8KLS0tIGJPK3RVZVEwZitiaDRTQlFmWHZG
+            YUZqcStCTHluT2NRZE5sdkRUWDFMbTQKXyNv+5m3y1/ebnD9fMXIPCfIxxshw5M8
+            2pS5+EPikA4DMrmbCb1s7KbnpWOrzMz2LmvHYsINf/rO9wbLNBCyjg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-18T20:41:42Z"
-    mac: ENC[AES256_GCM,data:su1iMcH4nrXy/1mItsU00dHuVBknoWpitCuSoFBSHeViLKJcnSf6gNzwT5o0Cnybx3zNgo1E8/ubX9b+ChP452tPaE1ZfEnnVlcJZ3A3mAgpDBgJZrcFlfSnLL0Vpr/Hy8MXVvdLx64YDSZ1+ur38WvUUhpCU1WVUZLS1KfGruw=,iv:V+5bksiBaqw/K7hDw2QYEHS5Vm/VtWAq3N6hb9J23f8=,tag:FYUjDP5Z8yrWnNNOyrQ0Bw==,type:str]
+    lastmodified: "2023-04-16T04:03:03Z"
+    mac: ENC[AES256_GCM,data:hre05Dajj36xFVHbwT6QimQBRi3JeENyhkiTXo/lZ2TOjjL14pgr1eROVk0ShxVe0DyluQfRGDcXqxSpxz3Ymjqwx7LRP+VB0sQgdzRpPBd2LPj/G0dRcwaFs3XxyKc3iIHg8wbw7srUqCknjWoDwKz3Us8ARu/7f2bXRijRDyM=,iv:WRv7MXq53XKLcyHlWa657Wko43LivGsgwqb9UmFfJi4=,tag:crNvw4T9CyNlHH2lXSkr2A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
