traefik authelia middleware test

--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -81,6 +81,11 @@ spec:
             policy: one_factor
             subject:
               - "group:admins"
+          - domain: "filebrowser.${SECRET_DOMAIN}"
+            policy: one_factor
+            subject:
+              - "group:admins"
+
       session:
         expiration: 24h
         inactivity: 24h
