traefik authelia test

--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -56,6 +56,7 @@ spec:
           cpu: 150m
     configMap:
       enabled: true
+      theme: dark
       log:
         level: debug
       authentication_backend:
@@ -77,6 +78,12 @@ spec:
       access_control:
         default_policy: deny
         rules:
+          - domain: "authelia.${SECRET_DOMAIN}"
+            policy: bypass
+          - domain: "${SECRET_DOMAIN}"
+            policy: one_factor
+            subject:
+              - "group:admins"
           - domain: "*.${SECRET_DOMAIN}"
             policy: one_factor
             subject:
