traefik authelia test

--- a/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
@@ -268,8 +268,8 @@ spec:
   chain:
     middlewares:
       - name: traefik-middleware-redirect-https
-      #- name: traefik-middleware-secure-headers
-      #- name: traefik-middleware-rate-limit
+      - name: traefik-middleware-secure-headers
+      - name: traefik-middleware-rate-limit
       # - name: traefik-middleware-local-ips
       # - name: traefik-middleware-cloudflare-ips
       - name: traefik-middleware-authelia
