--- a/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
@@ -195,11 +195,15 @@ kind: Middleware
 metadata:
   name: traefik-middleware-authelia
   namespace: networking
+  labels:
+    app.kubernetes.io/instance: authelia
+    app.kubernetes.io/name: authelia
 spec:
   forwardAuth:
     #address: "http://authelia:9091/api/verify?rd=https://auth.${SECRET_DOMAIN}"
     #address: http://authelia-external.authelia.svc.cluster.local/api/verify?rd=https://auth.${SECRET_DOMAIN}
-    address: http://authelia.networking.svc.cluster.local/api/verify?rd=https://authelia.${SECRET_DOMAIN}
+    #address: http://authelia.networking.svc.cluster.local/api/verify?rd=https://authelia.${SECRET_DOMAIN}
+    address: http://authelia.networking.svc.cluster.local/api/verify?rd=https%3A%2F%2Fauthelia.${SECRET_DOMAIN}%2F
     trustForwardHeader: true
     authResponseHeaders:
       - Remote-User
