--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -118,21 +118,21 @@ spec:
           enabled: false
         postgres:
           enabled: false
-    notifier:
-      disable_startup_check: true
-      smtp:
-        username: ${SECRET_AUTHENTIK_SMTP_USERNAME}
-        password: ${SECRET_AUTHENTIK_SMTP_PASSWORD}
-        host: smtp.gmail.com
-        port: 587
-        sender: Athelia <${SECRET_AUTHENTIK_SMTP_USERNAME}>
-    #   notifier:
-    #     disable_startup_check: true
-    #     filesystem:
-    #       enabled: true
-    #       filename: /config/notification.txt
-    #     smtp:
-    #       enabled: false
+    # notifier:
+    #   disable_startup_check: true
+    #   smtp:
+    #     username: ${SECRET_AUTHENTIK_SMTP_USERNAME}
+    #     password: ${SECRET_AUTHENTIK_SMTP_PASSWORD}
+    #     host: smtp.gmail.com
+    #     port: 587
+    #     sender: Athelia <${SECRET_AUTHENTIK_SMTP_USERNAME}>
+      notifier:
+        disable_startup_check: true
+        filesystem:
+          enabled: true
+          filename: /config/notification.txt
+        smtp:
+          enabled: false
     secret:
       existingSecret: authelia-secrets
 
