--- a/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
@@ -202,7 +202,7 @@ spec:
   forwardAuth:
     #address: http://authelia-external.authelia.svc.cluster.local/api/verify?rd=https://auth.${SECRET_DOMAIN}
     #address: http://authelia.networking.svc.cluster.local/api/verify?rd=https://authelia.${SECRET_DOMAIN}
-    address: http://authelia.networking.svc.cluster.local/api/verify?rd=https%3A%2F%2Fauthelia.${SECRET_DOMAIN}%2F
+    address: http://authelia.networking.svc.cluster.local:9091/api/verify?rd=https%3A%2F%2Fauthelia.${SECRET_DOMAIN}%2F
     trustForwardHeader: true
     authResponseHeaders:
       - Remote-User
