--- a/kubernetes/apps/default/hajimari/app/ingress.yaml
+++ b/kubernetes/apps/default/hajimari/app/ingress.yaml
@@ -11,7 +11,8 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: hajimari.${SECRET_DOMAIN}
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-forwardauth@kubernetescrd
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
 spec:
   ingressClassName: "traefik"
   tls:
