--- a/kubernetes/apps/default/weave-gitops/app/ingress.yaml
+++ b/kubernetes/apps/default/weave-gitops/app/ingress.yaml
@@ -10,7 +10,8 @@ metadata:
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
     external-dns.alpha.kubernetes.io/hostname: gitops.${SECRET_DOMAIN}
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
     hajimari.io/icon: sawtooth-wave
 spec:
   ingressClassName: "traefik"
