--- a/kubernetes/apps/media/sonarr/app/ingress.yaml
+++ b/kubernetes/apps/media/sonarr/app/ingress.yaml
@@ -12,7 +12,8 @@ metadata:
     hajimari.io/enable: "true"
     hajimari.io/icon: mdi:television-classic
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
 spec:
   ingressClassName: "traefik"
   tls:
