switch from authentik to authelia

--- a/kubernetes/apps/networking/traefik/add-ons/external-services/diskstation.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/diskstation.yaml
@@ -14,7 +14,8 @@ metadata:
     #external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
     cert-manager.io/cluster-issuer: letsencrypt-production
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
