--- a/kubernetes/apps/networking/traefik/add-ons/external-services/plex.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/plex.yaml
@@ -10,7 +10,8 @@ metadata:
     coredns.io/hostname: "plex.${SECRET_DOMAIN}"
     cert-manager.io/cluster-issuer: letsencrypt-production
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
