--- a/kubernetes/apps/default/homepage/app/config/kubernetes.yaml
+++ b/kubernetes/apps/default/homepage/app/config/kubernetes.yaml
@@ -1,2 +1,16 @@
 ---
 mode: cluster
+widgets:
+  # show the kubernetes widget, with the cluster summary and individual nodes
+  - kubernetes:
+      cluster:
+        show: true
+        cpu: true
+        memory: true
+        showLabel: true
+        label: "cluster"
+      nodes:
+        show: true
+        cpu: true
+        memory: true
+        showLabel: true
