--- a/kubernetes/apps/default/homepage/app/config/kubernetes.yaml
+++ b/kubernetes/apps/default/homepage/app/config/kubernetes.yaml
@@ -1,5 +1,4 @@
 ---
-mode: cluster
 widgets:
   # show the kubernetes widget, with the cluster summary and individual nodes
   - kubernetes:
@@ -14,3 +13,9 @@ widgets:
         cpu: true
         memory: true
         showLabel: true
+  - search:
+      provider: duckduckgo
+      target: _blank
+kubernetes:
+  mode: cluster
+settings:
