--- a/kubernetes/apps/default/homepage/app/helm-release.yaml
+++ b/kubernetes/apps/default/homepage/app/helm-release.yaml
@@ -38,8 +38,36 @@ spec:
           http:
             port: 3000
             targetPort: 3000
+    serviceAccount:
+      create: true
+      name: homepage
     config:
-      useExistingConfigMap: *app
+      #useExistingConfigMap: *app
+      bookmarks:
+        - Developer:
+            - Github:
+                - abbr: GH
+                  href: https://github.com/
+      widgets:
+        # show the kubernetes widget, with the cluster summary and individual nodes
+        - kubernetes:
+            cluster:
+              show: true
+              cpu: true
+              memory: true
+              showLabel: true
+              label: "cluster"
+            nodes:
+              show: true
+              cpu: true
+              memory: true
+              showLabel: true
+        - search:
+            provider: duckduckgo
+            target: _blank
+      kubernetes:
+        mode: cluster
+      settings:
     podAnnotations:
       secret.reloader.stakater.com/reload: *app
     resources:
