--- a/kubernetes/apps/default/homepage/app/ingress.yaml
+++ b/kubernetes/apps/default/homepage/app/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   name: homepage
   namespace: default
   annotations:
+    hajimari.io/enable: "true"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     external-dns.home.arpa/enabled: "true"
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
